force-app/main/default/objects/Candidate__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>This is a picklist used to select the respective skills the candidates posses</description>
    <label>Skills</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>JAVA</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>Machine learning</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>FullStack Development</fullName>
            </value>
            <value>
                <fullName>Software Development</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>